Multiples traces oscilloscope